[gd_scene load_steps=29 format=3 uid="uid://bwjrpqqiuhiy8"]

[ext_resource type="Script" path="res://game.gd" id="1_qmeim"]
[ext_resource type="Script" path="res://camera.gd" id="2_fy60k"]
[ext_resource type="PackedScene" uid="uid://ioin8p7f5ptd" path="res://player.tscn" id="2_sapog"]
[ext_resource type="Texture2D" uid="uid://cdrrd2jbo1l7y" path="res://map.png" id="3_yd000"]
[ext_resource type="Texture2D" uid="uid://ci01sj2h7iyvf" path="res://tileset x1_small.png" id="4_rjynw"]
[ext_resource type="Texture2D" uid="uid://bhh0urwg3jlau" path="res://bigmap.png" id="5_uuumv"]
[ext_resource type="Script" path="res://ui.gd" id="6_3skl7"]
[ext_resource type="Texture2D" uid="uid://c7hd36m383k5w" path="res://UI1.png" id="6_r765m"]
[ext_resource type="Script" path="res://dialog.gd" id="7_ooue0"]
[ext_resource type="Texture2D" uid="uid://vy70ukvoxp1k" path="res://UI2.png" id="7_w15ij"]
[ext_resource type="Script" path="res://notes.gd" id="8_o7yys"]
[ext_resource type="Texture2D" uid="uid://vpme5fe66dkl" path="res://UI3.png" id="8_yhurm"]
[ext_resource type="Script" path="res://score.gd" id="10_lpb6x"]
[ext_resource type="Texture2D" uid="uid://b55fyfanyvnm7" path="res://299063_heart_icon.png" id="11_ged8t"]
[ext_resource type="Texture2D" uid="uid://bh305ot50yqsu" path="res://question-mark.png" id="12_ss0co"]
[ext_resource type="Script" path="res://lives.gd" id="15_h1vfd"]
[ext_resource type="Script" path="res://start_button.gd" id="16_6dft5"]
[ext_resource type="AudioStream" uid="uid://bvsx21x5e1d81" path="res://Sound/sfx_6_mixkit-fairy-cartoon-success-voice-344.wav" id="16_b4sq8"]
[ext_resource type="AudioStream" uid="uid://68citbvhdeu4" path="res://Sound/sfx_7_mixkit-old-cartoon-says-thank-you-383.wav" id="17_hfiam"]
[ext_resource type="AudioStream" uid="uid://cyebae57aisyf" path="res://Sound/sfx_8_mixkit-small-cartoon-character-cheer-734.wav" id="18_b2sm3"]
[ext_resource type="AudioStream" uid="uid://dwer3jltsd55s" path="res://Sound/sfx_11_mixkit-cartoon-failure-piano-473.wav" id="19_gstj4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8x78e"]
texture = ExtResource("3_yd000")
texture_region_size = Vector2i(512, 512)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, 256, -256, 256, 256, -256, 256)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, 256, -256, 256, 256, -256, 256)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, 256, -256, 256, 256, -256, 256)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, 256, -256, 256, 256, -256, 256)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, 256, -256, 256, 256, -256, 256)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5leno"]
texture = ExtResource("4_rjynw")
texture_region_size = Vector2i(32, 32)
use_texture_padding = false
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7ol5p"]
texture = ExtResource("5_uuumv")
texture_region_size = Vector2i(512, 512)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 256, -256, 256, 256, -256, 256)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, 0, 0, 256, 256, -256, 256)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, -256, 256, 256, -256, -256)
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 256, -256, -256, -256, -256, 256)
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_jcto7"]
tile_size = Vector2i(512, 512)
uv_clipping = true
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_5leno")
sources/0 = SubResource("TileSetAtlasSource_8x78e")
sources/3 = SubResource("TileSetAtlasSource_7ol5p")

[sub_resource type="AnimatedTexture" id="AnimatedTexture_bwfi3"]
frames = 3
frame_0/texture = ExtResource("6_r765m")
frame_0/duration = 0.2
frame_1/texture = ExtResource("7_w15ij")
frame_1/duration = 0.2
frame_2/texture = ExtResource("8_yhurm")
frame_2/duration = 0.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlhqd"]
size = Vector2(3067, 1549)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8m70y"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 86.786
flatness = 0.27
initial_velocity_min = 1000.0
initial_velocity_max = 2000.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
gravity = Vector3(0, 980, 0)
scale_min = 0.1
scale_max = 0.3

[node name="Game" type="Node2D"]
script = ExtResource("1_qmeim")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(16, -539)
zoom = Vector2(0.2, 0.2)
position_smoothing_enabled = true
script = ExtResource("2_fy60k")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_jcto7")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-131070, 131072, 1, -196606, 131072, 1, -196607, 131072, 1, -196608, 196611, 4, -131073, 131075, 4, -131074, 131072, 1, -131075, 131072, 1, -65539, 131072, 1, -65538, 131072, 1, -65537, 131075, 5, -131072, 196611, 5, -131071, 131072, 1, -262142, 131072, 1, -327678, 131072, 2, -393214, 131072, 2, -458750, 131072, 2, -458751, 131072, 2, -458752, 131072, 2, -393217, 131072, 2, -393218, 131072, 2, -393219, 131072, 2, -327683, 131072, 2, -262147, 131072, 2, -196611, 131072, 1, -196610, 131072, 1, -196609, 131072, 1, -262144, 131072, 1, -262143, 131072, 1, -393215, 131072, 2, -393216, 131072, 2, -327681, 131072, 2, -262146, 131072, 2, -327682, 131072, 2, -458755, 131072, 2, -458754, 131072, 2, -458753, 131072, 2, -524288, 131072, 2, -524287, 131072, 2, -524286, 131072, 2, -589823, 0, 1, -589822, 0, 1, -589821, 65536, 0, -524285, 65536, 0, -458749, 0, 0, -393213, 65536, 0, -393212, 0, 0, -327676, 65536, 0, -589820, 65536, 0, -589819, 65536, 0, -589818, 65536, 1, -524282, 65536, 1, -524283, 131072, 0, -524284, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 65536, 1, -393211, 131072, 0, -393210, 65536, 1, -327674, 65536, 1, -262138, 65536, 1, -327675, 65536, 0, -327677, 131072, 0, -262141, 65536, 0, -196605, 0, 0, -131069, 0, 0, -196602, 65536, 1, -262139, 0, 0, -262140, 131072, 0, -196604, 65536, 0, -131068, 0, 0, -131067, 0, 0, -196603, 65536, 0, -65543, 65536, 1, -131079, 65536, 1, -196615, 65536, 1, -262151, 65536, 1, -327687, 65536, 1, -393223, 65536, 1, -458759, 65536, 1, -458758, 65536, 0, -458757, 65536, 0, -458756, 65536, 0, -393220, 65536, 0, -327684, 65536, 0, -262148, 65536, 0, -196612, 65536, 0, -131076, 65536, 0, -65540, 65536, 0, -65541, 65536, 0, -131077, 65536, 0, -196613, 65536, 0, -262149, 65536, 0, -327685, 65536, 0, -393221, 65536, 0, -393222, 65536, 0, -327686, 65536, 0, -262150, 65536, 0, -196614, 65536, 0, -131078, 65536, 0, -65542, 65536, 0, -524290, 0, 1, -524291, 0, 1, -524292, 65536, 0, -524293, 65536, 0, -524294, 65536, 0, -524295, 65536, 1, -655359, 65536, 0, -655358, 0, 0, -655357, 131072, 0, -655356, 131072, 0, -655355, 131072, 0, -655354, 65536, 1, -655362, 131072, 0, -589826, 131072, 0, -589827, 131072, 0, -589828, 131072, 0, -589829, 131072, 0, -589830, 131072, 0, -589831, 65536, 1, -655367, 0, 1, -655366, 131072, 0, -655365, 131072, 0, -655364, 131072, 0, -655363, 131072, 0, -720895, 0, 0, -720894, 131072, 0, -720893, 131072, 0, -720892, 65536, 0, -720891, 0, 0, -720890, 0, 1, -524289, 65536, 1, -589824, 65536, 1, -655360, 65536, 1, -720896, 65536, 1, -786432, 65536, 1, -655361, 65536, 1, -589825, 65536, 1, -720897, 65536, 1, -786431, 65536, 1, -786430, 65536, 1, -786429, 65536, 1, -786428, 65536, 1, -786427, 131072, 0, -786426, 131072, 0, -720898, 65536, 1, -720899, 65536, 1, -720900, 65536, 1, -720903, 131072, 0, -1114119, 65536, 1, -1048583, 65536, 1, -983047, 65536, 1, -917511, 65536, 1, -851975, 65536, 1, -786439, 65536, 1, -1114118, 65536, 1, -1048582, 65536, 1, -983046, 65536, 1, -917510, 65536, 1, -851974, 65536, 1, -786438, 65536, 1, -1114117, 65536, 1, -1048581, 65536, 1, -983045, 65536, 1, -917509, 65536, 1, -851973, 65536, 1, -786437, 65536, 1, -1114116, 65536, 1, -1048580, 65536, 1, -983044, 65536, 1, -917508, 65536, 1, -851972, 65536, 1, -786436, 65536, 1, -1114115, 65536, 1, -1048579, 65536, 1, -983043, 65536, 1, -917507, 65536, 1, -851971, 65536, 1, -786435, 65536, 1, -1114114, 65536, 1, -1048578, 65536, 1, -983042, 65536, 1, -917506, 65536, 1, -851970, 65536, 1, -786434, 65536, 1, -1114113, 65536, 1, -1048577, 65536, 1, -983041, 65536, 1, -917505, 65536, 1, -851969, 65536, 1, -786433, 65536, 1, -1179648, 65536, 1, -1114112, 65536, 1, -1048576, 65536, 1, -983040, 65536, 1, -917504, 65536, 1, -851968, 65536, 1, -1179647, 65536, 1, -1114111, 65536, 1, -1048575, 65536, 1, -983039, 65536, 1, -917503, 65536, 1, -851967, 65536, 1, -1179646, 65536, 1, -1114110, 65536, 1, -1048574, 65536, 1, -983038, 65536, 1, -917502, 65536, 1, -851966, 65536, 1, -1179645, 65536, 1, -1114109, 65536, 1, -1048573, 65536, 1, -983037, 65536, 1, -917501, 65536, 1, -851965, 65536, 1, -1114108, 65536, 1, -1048572, 65536, 1, -983036, 65536, 1, -917500, 65536, 1, -851964, 65536, 1, -1114107, 65536, 1, -1048571, 65536, 1, -983035, 65536, 1, -917499, 65536, 1, -851963, 65536, 1, -1114106, 65536, 1, -1048570, 65536, 1, -983034, 65536, 1, -917498, 65536, 1, -851962, 65536, 1, -1179641, 0, 0, -1114105, 0, 1, -1048569, 65536, 1, -983033, 65536, 1, -917497, 65536, 0, -851961, 0, 0, -786425, 131072, 0, -720889, 0, 1, -655353, 65536, 1, -589817, 65536, 1, -524281, 65536, 1, -458745, 65536, 1, -1179640, 0, 0, -1114104, 0, 1, -1048568, 65536, 1, -983032, 65536, 1, -917496, 0, 0, -851960, 65536, 0, -786424, 131072, 0, -720888, 0, 1, -655352, 65536, 1, -589816, 65536, 1, -524280, 65536, 1, -458744, 65536, 1, -1179639, 0, 0, -1114103, 0, 1, -1048567, 65536, 1, -983031, 65536, 1, -917495, 65536, 1, -851959, 65536, 1, -786423, 65536, 1, -720887, 65536, 1, -655351, 65536, 1, -589815, 65536, 1, -524279, 65536, 1, -458743, 65536, 1, -1179638, 131072, 0, -1114102, 0, 1, -1048566, 65536, 1, -983030, 65536, 1, -917494, 65536, 1, -851958, 65536, 1, -786422, 65536, 1, -720886, 65536, 1, -655350, 65536, 1, -589814, 65536, 1, -524278, 65536, 1, -458742, 65536, 1, -1179637, 65536, 0, -1114101, 0, 0, -1048565, 131072, 0, -983029, 0, 0, -917493, 65536, 0, -851957, 131072, 0, -786421, 65536, 0, -720885, 0, 1, -655349, 65536, 1, -589813, 65536, 1, -524277, 65536, 1, -458741, 65536, 1, -1179636, 65536, 0, -1114100, 131072, 0, -1048564, 0, 0, -983028, 0, 0, -917492, 131072, 0, -851956, 0, 0, -786420, 131072, 0, -720884, 0, 0, -655348, 65536, 0, -589812, 131072, 0, -524276, 131072, 0, -458740, 0, 0, -393209, 65536, 1, -327673, 65536, 1, -262137, 65536, 1, -196601, 65536, 1, -393208, 65536, 1, -327672, 65536, 1, -262136, 65536, 1, -196600, 65536, 1, -131064, 65536, 1, -393207, 65536, 1, -327671, 65536, 1, -262135, 65536, 1, -196599, 65536, 1, -131063, 65536, 1, -393206, 65536, 1, -327670, 65536, 1, -262134, 65536, 1, -196598, 65536, 1, -131062, 65536, 1, -393205, 65536, 1, -327669, 65536, 1, -262133, 65536, 1, -196597, 65536, 1, -131061, 65536, 1, -393204, 65536, 0, -327668, 65536, 0, -262132, 131072, 0, -196596, 0, 0, -131060, 65536, 0, -655371, 65536, 1, -589835, 65536, 1, -524299, 65536, 1, -458763, 65536, 1, -393227, 65536, 1, -327691, 65536, 1, -262155, 65536, 1, -196619, 65536, 1, -131083, 65536, 1, -65547, 65536, 1, -655370, 65536, 1, -589834, 65536, 1, -524298, 65536, 1, -458762, 65536, 1, -393226, 65536, 1, -327690, 65536, 1, -262154, 65536, 1, -196618, 65536, 1, -131082, 65536, 1, -65546, 65536, 1, -655369, 0, 1, -589833, 65536, 1, -524297, 65536, 1, -458761, 65536, 1, -393225, 65536, 1, -327689, 65536, 1, -262153, 65536, 1, -196617, 65536, 1, -131081, 65536, 1, -65545, 65536, 1, -655368, 0, 1, -589832, 65536, 1, -524296, 65536, 1, -458760, 65536, 1, -393224, 65536, 1, -327688, 65536, 1, -262152, 65536, 1, -196616, 65536, 1, -131080, 65536, 1, -65544, 65536, 1, -1245195, 65536, 0, -1179659, 131072, 0, -1114123, 65536, 0, -1048587, 0, 1, -983051, 65536, 1, -917515, 65536, 1, -851979, 65536, 1, -786443, 65536, 1, -720907, 65536, 1, -1245194, 0, 0, -1179658, 65536, 0, -1114122, 65536, 0, -1048586, 0, 1, -983050, 65536, 1, -917514, 65536, 1, -851978, 65536, 1, -786442, 65536, 1, -720906, 65536, 1, -1245193, 65536, 0, -1179657, 65536, 0, -1114121, 0, 0, -1048585, 0, 1, -983049, 65536, 1, -917513, 65536, 1, -851977, 65536, 0, -786441, 65536, 0, -720905, 65536, 0, -1245192, 131072, 0, -1179656, 131072, 0, -1114120, 65536, 0, -1048584, 0, 1, -983048, 65536, 1, -917512, 65536, 1, -851976, 0, 0, -786440, 0, 0, -720904, 131072, 0, -1310713, 131072, 0, -1245177, 0, 0, -1310712, 0, 0, -1245176, 0, 0, -1310711, 65536, 0, -1245175, 65536, 0, -1310710, 65536, 0, -1245174, 0, 0, -1310709, 0, 0, -1245173, 0, 0, -1310708, 65536, 0, -1245172, 65536, 0, -1245191, 0, 1, -1179655, 65536, 1, -1245190, 0, 1, -1179654, 65536, 1, -1245189, 0, 1, -1179653, 65536, 1, -1245188, 0, 1, -1179652, 65536, 1, -1245187, 0, 1, -1179651, 65536, 1, -1245186, 0, 1, -1179650, 65536, 1, -1245185, 0, 1, -1179649, 65536, 1, -1310720, 0, 1, -1245184, 65536, 1, -1310719, 0, 1, -1245183, 65536, 1, -1310718, 0, 1, -1245182, 65536, 1, -1310717, 0, 1, -1245181, 65536, 1, -1310716, 0, 1, -1245180, 65536, 1, -1310715, 0, 1, -1245179, 65536, 1, -1310714, 0, 1, -1245178, 65536, 1, -1245197, 131072, 0, -1179661, 65536, 0, -1114125, 131072, 0, -1048589, 65536, 0, -983053, 131072, 0, -917517, 0, 0, -851981, 65536, 0, -786445, 131072, 0, -720909, 131072, 0, -655373, 65536, 0, -589837, 0, 0, -524301, 0, 0, -458765, 131072, 0, -393229, 131072, 0, -327693, 65536, 0, -262157, 65536, 0, -196621, 0, 0, -131085, 65536, 0, -65549, 131072, 0, -1245196, 0, 0, -1179660, 65536, 0, -1114124, 0, 0, -1048588, 131072, 0, -983052, 131072, 0, -917516, 131072, 0, -851980, 131072, 0, -786444, 65536, 0, -720908, 65536, 0, -655372, 0, 1, -589836, 65536, 1, -524300, 65536, 1, -458764, 65536, 1, -393228, 65536, 1, -327692, 65536, 1, -262156, 65536, 1, -196620, 65536, 1, -131084, 65536, 1, -65548, 65536, 1, -131066, 65536, 1, -131065, 65536, 1, -327679, 131072, 2, -327680, 131072, 2, -262145, 131072, 2, -720902, 131072, 0, -720901, 65536, 1, -13, 0, 1, -12, 0, 1, -11, 0, 1, -10, 0, 1, -9, 0, 1, -8, 0, 1, -7, 0, 1, -6, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, 65523, 0, 2, 65524, 0, 2, 65525, 0, 2, 65526, 0, 2, 65527, 0, 2, 65528, 0, 2, 65529, 0, 2, 65530, 0, 2, 65531, 0, 2, 65532, 0, 2, 65533, 0, 2, 65534, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 2, 10, 0, 2, 11, 0, 2, 12, 0, 2, -1310733, 65536, 0, -1310732, 65536, 0, -1310731, 0, 0, -1310730, 0, 0, -1310729, 65536, 0, -1310728, 0, 0, -1310727, 0, 0, -1310726, 131072, 0, -1310725, 65536, 0, -1310724, 65536, 0, -1310723, 131072, 0, -1310722, 131072, 0, -1310721, 0, 0, -1376256, 131072, 0, -1376255, 131072, 0, -1376254, 0, 0, -1376253, 131072, 0, -1376252, 65536, 0, -1376251, 65536, 0, -1376250, 65536, 0, -1376249, 131072, 0, -1376248, 0, 0, -1376247, 0, 0, -1376246, 131072, 0, -1376245, 0, 0, -1376244, 0, 0, -1179644, 65536, 1, -1179643, 65536, 1, -1179642, 65536, 1, 131059, 0, 2, 196595, 0, 2, 262131, 0, 2, 327667, 0, 2, 131060, 0, 2, 196596, 0, 2, 262132, 0, 2, 327668, 0, 2, 131061, 0, 2, 196597, 0, 2, 262133, 0, 2, 327669, 0, 2, 131062, 0, 2, 196598, 0, 2, 262134, 0, 2, 327670, 0, 2, 131063, 0, 2, 196599, 0, 2, 262135, 0, 2, 327671, 0, 2, 131064, 0, 2, 196600, 0, 2, 262136, 0, 2, 327672, 0, 2, 131065, 0, 2, 196601, 0, 2, 262137, 0, 2, 327673, 0, 2, 131066, 0, 2, 196602, 0, 2, 262138, 0, 2, 327674, 0, 2, 131067, 0, 2, 196603, 0, 2, 262139, 0, 2, 327675, 0, 2, 131068, 0, 2, 196604, 0, 2, 262140, 0, 2, 327676, 0, 2, 131069, 0, 2, 196605, 0, 2, 262141, 0, 2, 327677, 0, 2, 131070, 0, 2, 196606, 0, 2, 262142, 0, 2, 327678, 0, 2, 131071, 0, 2, 196607, 0, 2, 262143, 0, 2, 327679, 0, 2, 65536, 0, 2, 131072, 0, 2, 196608, 0, 2, 262144, 0, 2, 65537, 0, 2, 131073, 0, 2, 196609, 0, 2, 262145, 0, 2, 65538, 0, 2, 131074, 0, 2, 196610, 0, 2, 262146, 0, 2, 65539, 0, 2, 131075, 0, 2, 196611, 0, 2, 262147, 0, 2, 65540, 0, 2, 131076, 0, 2, 196612, 0, 2, 262148, 0, 2, 65541, 0, 2, 131077, 0, 2, 196613, 0, 2, 262149, 0, 2, 65542, 0, 2, 131078, 0, 2, 196614, 0, 2, 262150, 0, 2, 65543, 0, 2, 131079, 0, 2, 196615, 0, 2, 262151, 0, 2, 65544, 0, 2, 131080, 0, 2, 196616, 0, 2, 262152, 0, 2, 65545, 0, 2, 131081, 0, 2, 196617, 0, 2, 262153, 0, 2, 65546, 0, 2, 131082, 0, 2, 196618, 0, 2, 262154, 0, 2, 65547, 0, 2, 131083, 0, 2, 196619, 0, 2, 262155, 0, 2, 65548, 0, 2, 131084, 0, 2, 196620, 0, 2, 262156, 0, 2)

[node name="Map" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_sapog")]
position = Vector2(-4, -1908)

[node name="Ghosts" type="Node2D" parent="."]
y_sort_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = -4.0
offset_right = 1916.0
offset_bottom = 1080.0
texture = SubResource("AnimatedTexture_bwfi3")
script = ExtResource("6_3skl7")

[node name="Jar" type="Node2D" parent="CanvasLayer/TextureRect"]
position = Vector2(267, 732)

[node name="Dialog" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 603.0
offset_top = 896.0
offset_right = 1403.0
offset_bottom = 1009.0
theme_override_colors/font_color = Color(0.65098, 0.768627, 1, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
script = ExtResource("7_ooue0")

[node name="Notes" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 70.0
offset_top = 103.0
offset_right = 470.0
offset_bottom = 353.0
theme_override_colors/font_color = Color(0.651673, 0.767033, 1, 1)
theme_override_font_sizes/font_size = 35
script = ExtResource("8_o7yys")

[node name="Score" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 1558.0
offset_top = 55.0
offset_right = 1833.0
offset_bottom = 124.0
theme_override_colors/font_color = Color(0.65098, 0.768627, 1, 1)
theme_override_font_sizes/font_size = 50
text = "0
"
script = ExtResource("10_lpb6x")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 1719.0
offset_top = 62.0
offset_right = 2231.0
offset_bottom = 574.0
scale = Vector2(0.101815, 0.101815)
texture = ExtResource("11_ged8t")

[node name="Lives" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 1788.0
offset_top = 52.0
offset_right = 1898.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(0.65098, 0.768627, 1, 1)
theme_override_font_sizes/font_size = 50
text = "3"
script = ExtResource("15_h1vfd")

[node name="Win" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 3.0
offset_top = 7.0
offset_right = 1894.0
offset_bottom = 883.0
theme_override_font_sizes/font_size = 300
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Win"]
layout_mode = 0
offset_left = 559.0
offset_top = 603.0
offset_right = 1375.0
offset_bottom = 884.0
theme_override_font_sizes/font_size = 200
text = "Restart
"
script = ExtResource("16_6dft5")

[node name="Lose" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 3.0
offset_top = 7.0
offset_right = 1894.0
offset_bottom = 883.0
theme_override_font_sizes/font_size = 300
text = "YOU LOSE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Lose"]
layout_mode = 0
offset_left = 559.0
offset_top = 603.0
offset_right = 1375.0
offset_bottom = 884.0
theme_override_font_sizes/font_size = 200
text = "Restart
"
script = ExtResource("16_6dft5")

[node name="Dropoff" type="Area2D" parent="."]
position = Vector2(5, -552)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dropoff"]
position = Vector2(-5.50006, -726.5)
shape = SubResource("RectangleShape2D_xlhqd")

[node name="Hearts" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_8m70y")
texture = ExtResource("11_ged8t")
one_shot = true
explosiveness = 0.85
randomness = 0.2
fixed_fps = 0
draw_order = 0

[node name="QuestionMarks" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_8m70y")
texture = ExtResource("12_ss0co")
one_shot = true
explosiveness = 0.85
randomness = 0.2
fixed_fps = 0
draw_order = 0

[node name="Teleporter" type="Node2D" parent="."]
position = Vector2(10, -1021)

[node name="Success" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_b4sq8")

[node name="Success2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_hfiam")

[node name="Success3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_b2sm3")

[node name="Failure1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_gstj4")
